2001-10-29  Ion Badulescu  <ionut@moisil.badula.org>

	* configure.in: bumped version up to 6.1a5-pre

	* NEWS: fixed speeling mistaike

2001-10-29  Ion Badulescu  <ionut@moisil.badula.org>

	* released snapshot am-utils-6.1a4

2001-10-26  Ion Badulescu  <ionut@moisil.badula.org>

	These changes fix autofs support for sublinks. While it is not
	perfect by any means and is hardly better than non-autofs, at
	least it works.

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_lookup_2_req): don't
	reply if the mount is in progress
	(autofs_mount_succeeded): handle both delayed lookups and mounts
	(autofs_mount_failed): ditto

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): don't dispose of the
	original opt_fs if we have a sublink

2001-10-23  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): fixed silly typo (mf
	instead of new_mf) which was causing null pointer error when
	sublinks were being used

2001-10-22  Ion Badulescu  <ionut@moisil.badula.org>

	* README.autofs: updated

	* NEWS: updated

	* INSTALL: updated

	* AUTHORS: added myself

	* doc/am-utils.texi: updated

	* conf/autofs/autofs_solaris_v2_v3.c (xdr_autofs_rddirargs): use
	xdr_u_int() and cast things to (int) to appease Solaris 2.7 compile
	(autofs_readdir_2_req): cast req->rda_offset to (int), same as
	above

2001-10-22  Ion Badulescu  <ionut@moisil.badula.org>

	Autofs direct mounts have been verified to work on Solaris2.[67].

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_lookup_2_req):
	retrieve the uid and gid from the lookup request
	(autofs_mount_2_req): skip the first char in the name (it's a
	leading '/') if this is a direct mount

	* amd/amfs_direct.c (amfs_direct_ops): use amfs_auto_lookup_child
	and amfs_auto_mount_child for amfs_direct's methods

	* amd/amfs_auto.c (amfs_auto_lookup_child): don't leak an am_node
	if the mntfs lookup fails

2001-10-21  Ion Badulescu  <ionut@moisil.badula.org>

	* include/am_utils.h (AMF_REMOUNT): new flag, marks the node as